src/test/deca/syntax/invalid/decaObjet/class/07methodWithoutBracket.deca
// Description:
//    test incorrect syntaxiquement car il manque { après les arguments de la méthode
//
// Resultats:
//    07methodWithoutBracket.deca:14:8:
//
// Historique:
//    cree le 14/06/2022

class Point2D {     
    int x; // Abscisse     
    int y; // Ordonnee        
    Point2D get ()        
        return this;     
    } 
} 